--- a/Prak1/121140091_Khairani Bilqis_Prak1.html
+++ b/Prak1/121140091_Khairani Bilqis_Prak1.html
@@ -4,7 +4,10 @@
 <html lang="id">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas Pertemuan 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,7 +23,7 @@
     </ul>
 
     <h2>Tentang Saya</h2>
-    <p>Biasa dipanggil Bilqis, saya mahasiswa dari program studi Teknik Informatika di Institut Teknologi Sumatera (ITERA) angkatan 2021. Tertarik dengan pengembangan web dan hal yang berhubungan dengan design. Hobi membaca, main dan rebahan.</p>
+    <p>Biasa dipanggil Bilqis, saya mahasiswa dari program studi Teknik Informatika di Institut Teknologi Sumatera (ITERA) angkatan 2021. Tertarik dengan pengembangan web dan hal yang berhubungan dengan <i>design</i>. Hobi membaca, main dan rebahan. Ketika saya merasa lelah dan jatuh dalam berkembang, saya selalu melihat video-video motivasi dari para motivator yang selalu memberikan saya semangat kembali. Di bawah ini klip favorit saya.</p>
 
     <figure>
         <video src="video_motivasi.mp4" width="500px" controls></video>
